# lighthouse-rs

./: .gitignore  Cargo.toml  README.md  build-release-win.ps1
.github/workflows/: release.yml
lighthouse_app/: package.json  pnpm-lock.yaml
lighthouse_app/src/: App.vue
lighthouse_app/src-tauri/: Cargo.toml  tauri.conf.json
lighthouse_app/src-tauri/capabilities/: default.json
lighthouse_app/src-tauri/src/: lib.rs  main.rs
lighthouse_app/src/components/: Titlebar.vue
lighthouse_cli/: Cargo.toml
lighthouse_cli/src/: main.rs  tui.rs
lighthouse_cli/src/cli/: commands.rs  mod.rs  response.rs
lighthouse_core/: Cargo.toml
lighthouse_core/src/: lib.rs  logging.rs  steamvr_integration.rs
lighthouse_core/src/bluetooth/: device_control.rs  scanning.rs
lighthouse_core/src/config/: mod.rs
lighthouse_core/src/models/: mod.rs
src/: main.rs  steamvr_integration.rs
src/bluetooth/: device_control.rs  mod.rs  scanning.rs
src/cli/: commands.rs  mod.rs  response.rs
src/config/: mod.rs
src/models/: device.rs
steamvr/: lighthouse-rs.vrmanifest
