[package]
name = "lighthouse-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
lighthouse_core = { path = "../lighthouse_core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"

[profile.release]
# Enable link-time optimization for maximum performance
lto = true
# Enable optimizations for size
opt-level = "z"
# Strip debug symbols
strip = true
# Enable code generation units for better parallelism during compilation
codegen-units = 1
# Panic behavior: abort gives smaller binaries than unwind
panic = "abort"

